# sanki-engine.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
docs/: spec-traceability.md
examples/: gen_vectors.rs
src/: apply.rs  capture.rs  clock.rs  engine.rs  error.rs  lib.rs  prelude.rs
src/canonicalize/: castling_rights.rs  check_marker.rs  double_step.rs  en_passant_flag.rs  mod.rs
src/domain/: actor.rs  half_move.rs  mod.rs  outcome.rs  piece.rs  side.rs  square.rs  status.rs  time.rs  time_control.rs  variant.rs
src/kernel/: mod.rs  state.rs  step.rs
src/legality/: castling.rs  check.rs  drops.rs  en_passant.rs  mod.rs  promotion.rs  resolve.rs  self_check.rs
src/movement/: attack.rs  foot_soldier.rs  generate.rs  leaper.rs  mod.rs  slider.rs  stepper.rs
src/position/: board.rs  feen.rs  mod.rs  style.rs
src/terminal/: dead_position.rs  insufficient.rs  legal_set.rs  mod.rs  move_cap.rs  move_limit.rs  repetition.rs  uchifuzume.rs
tests/: conformance.rs  conformance_clock.rs  differential.rs  fixtures.rs  golden_captures.rs  golden_feen.rs  perft.rs
tests/conformance/: README.md  clock.json  legality.json
tests/corpus/: differential.tsv
tests/fixtures/: README.md  transitions.json
